kube/cashshuffle-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  labels:
    service: cashshuffle
  name: cashshuffle
spec:
  replicas: 3
  selector:
    matchLabels:
      service: cashshuffle
  template:
    metadata:
      labels:
        service: cashshuffle
    spec:
      containers:
      - image: zquestz/cashshuffle-web:latest
        imagePullPolicy: Always
        name: cashshuffle
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "16Mi"
      restartPolicy: Always
