kube/cashshuffle-ingress-tls.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cashshuffle-ingress
  namespace: default
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "gce"
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - www.cashshuffle.com
    - cashshuffle.com
    secretName: cashshuffle-tls
  backend:
    serviceName: cashshuffle
    servicePort: 87
  rules:
  - host: cashshuffle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cashshuffle
          servicePort: 87
  - host: www.cashshuffle.com
    http:
      paths:
      - path: /
        backend:
          serviceName: cashshuffle
          servicePort: 87
